--- a/builds/jenkins-build-pack-lambda/Jenkinsfile
+++ b/builds/jenkins-build-pack-lambda/Jenkinsfile
@@ -528,25 +528,48 @@ def LoadConfiguration() {
 
 /**	Build project based on runtime
  */
-def buildLambda(String runtime) {
-  echo "installing dependencies for $runtime"
-  if (runtime.indexOf("nodejs") > -1) {
-    sh "npm install --save"
-  } else if (runtime.indexOf("java") > -1) {
-    sh "mvn package"
-  } else if (runtime.indexOf("python") > -1) {
-    // install requirements.txt in library folder, these python modules will be a part of deployment package
-    sh "rm -rf library"
-    sh "mkdir library"
-    sh "pip install -r requirements.txt -t library"
-    sh "touch library/__init__.py"
-    // create virtual environment and install pytest
-    sh """
-    pip install virtualenv
-    virtualenv venv
-      .venv / bin / activate
-    pip install pytest
-    """
+def buildLambda(String runtime, String repo_name) {
+	echo "installing dependencies for $runtime"
+	if (runtime.indexOf("nodejs") > -1) {
+		sh "npm install --save"
+	} else if (runtime.indexOf("java") > -1) {
+		sh "mvn package"
+	} else if (runtime.indexOf("python") > -1) {
+	  // install requirements.txt in library folder, these python modules will be a part of deployment package
+		sh "rm -rf library"
+		sh "mkdir library"
+		sh "touch library/__init__.py"
+
+    if (runtime == 'python3.6'){
+      // Installing dependencies
+      sh "pip3 install -r requirements.txt -t library"
+      // create virtual environment and install pytest
+      sh """
+			python3 -m venv virtualenv
+			. virtualenv/bin/activate
+			pip3 install pytest
+			pytest test
+		  """
+    }else{
+      // Installing dependencies
+      sh "pip install -r requirements.txt -t library"
+      // create virtual environment and install pytest
+		  sh """
+		  pip install virtualenv
+		  virtualenv venv
+		  . venv/bin/activate
+		  pip install pytest
+	  	"""
+    }
+	} else if (runtime.indexOf("go") > -1 ){
+    //Installing dependencies using dep ensure
+    //golang build scripts
+   	withEnv(["GOPATH=${env.WORKSPACE}"]) {
+      sh "mkdir -p $GOPATH/src"
+      sh "rsync -a --exclude='.*' $GOPATH/"+ repo_name+"  $GOPATH/src"
+      sh "cd $GOPATH/src/"+ repo_name+" && dep ensure"
+      sh "env GOOS=linux GOARCH=amd64 go build -o main $GOPATH/src/"+ repo_name+"/main.go"
+    }
   }
 }
 
@@ -562,74 +585,74 @@ def resetCredentials() {
 	missing.
 */
 def validateDeploymentConfigurations(def prop) {
-  if (prop.containsKey("service")) {
-    if (prop['service'] == "") {
-      error "Wrong configuration. Value for Key 'service' is missing in the configuration"
-    }
-  } else {
-    error "Wrong configuration. Key 'service' is missing in the configuration"
-  }
-  if (prop.containsKey("providerRuntime")) {
-    def _runtime = prop['providerRuntime']
-    if (_runtime == "") {
-      error "Wrong configuration. Value for Key 'providerRuntime' is missing in the configuration"
-    } else {
-      def validRuntimes = ["nodejs4.3", "nodejs6.10", "python2.7", "java8"] //@TODO. Add more runtime supports.
-      def flag = false
+	if (prop.containsKey("service")) {
+		if (prop['service'] == "") {
+			error "Wrong configuration. Value for Key 'service' is missing in the configuration"
+		}
+	} else {
+		error "Wrong configuration. Key 'service' is missing in the configuration"
+	}
+	if (prop.containsKey("providerRuntime")) {
+		def _runtime = prop['providerRuntime']
+		if (_runtime == "") {
+			error "Wrong configuration. Value for Key 'providerRuntime' is missing in the configuration"
+		} else {
+			def validRuntimes = ["nodejs4.3", "nodejs6.10", "python2.7", "python3.6" "java8", "go1.x"] //@TODO. Add more runtime supports.
+			def flag = false
 
-      for (int i = 0; i < validRuntimes.size(); i++) {
-        if (_runtime == validRuntimes[i]) {
-          flag = true
-        }
-      }
+			for (int i = 0; i < validRuntimes.size(); i++) {
+				if (_runtime == validRuntimes[i]) {
+					flag = true
+				}
+			}
 
-      if (!flag) {
-        echo "$flag"
-        error "Runtime given in the configuration is not valid."
-      }
-    }
-  } else {
-    error "Wrong configuration. Key 'providerRuntime' is missing in the configuration"
-  }
-  if (prop.containsKey("providerTimeout")) {
-    if (prop['providerTimeout'] == "") {
-      error "Wrong configuration. Value for Key 'providerTimeout' is missing in the configuration"
-    } else if (Integer.parseInt(prop['providerTimeout']) > 300) { // Should not be a high
-      error "Wrong configuration. Value for Key 'providerTimeout' should be a less than 160"
-    }
-  } else {
-    error "Wrong configuration. Key 'providerTimeout' is missing in the configuration"
-  }
+			if (!flag) {
+				echo "$flag"
+				error "Runtime given in the configuration is not valid."
+			}
+		}
+	} else {
+		error "Wrong configuration. Key 'providerRuntime' is missing in the configuration"
+	}
+	if (prop.containsKey("providerTimeout")) {
+		if (prop['providerTimeout'] == "") {
+			error "Wrong configuration. Value for Key 'providerTimeout' is missing in the configuration"
+		} else if (Integer.parseInt(prop['providerTimeout']) > 300) { // Should not be a high
+			error "Wrong configuration. Value for Key 'providerTimeout' should be a less than 160"
+		}
+	} else {
+		error "Wrong configuration. Key 'providerTimeout' is missing in the configuration"
+	}
 
-  if (prop.containsKey("region")) {
-    if (prop['region'] == "") {
-      error "Wrong configuration. Value for Key 'region' is missing in the configuration"
-    } else if (prop['region'] != configLoader.AWS.REGION) {
-      error "Wrong configuration. Value for Key 'region' should be ${region}"
-    }
-  } else {
-    error "Wrong configuration. Key 'region' is missing in the configuration"
-  }
+	if (prop.containsKey("region")) {
+		if (prop['region'] == "") {
+			error "Wrong configuration. Value for Key 'region' is missing in the configuration"
+		} else if (prop['region'] != configLoader.AWS.REGION) {
+			error "Wrong configuration. Value for Key 'region' should be ${region}"
+		}
+	} else {
+		error "Wrong configuration. Key 'region' is missing in the configuration"
+	}
 
-  def runtime = prop['providerRuntime']
-  if (runtime.indexOf("java") > -1) {
+	def runtime = prop['providerRuntime']
+	if (runtime.indexOf("java") > -1) {
 
-    if (prop.containsKey("artifact")) {
-      if (prop['artifact'] == "") {
-        error "Wrong configuration. Value for Key 'artifact' is missing in the configuration"
-      }
-    } else {
-      error "Wrong configuration. Key 'artifact' is missing in the configuration"
-    }
+		if (prop.containsKey("artifact")) {
+			if (prop['artifact'] == "") {
+				error "Wrong configuration. Value for Key 'artifact' is missing in the configuration"
+			}
+		} else {
+			error "Wrong configuration. Key 'artifact' is missing in the configuration"
+		}
 
-    if (prop.containsKey("mainClass")) {
-      if (prop['mainClass'] == "") {
-        error "Wrong configuration. Value for Key 'mainClass' is missing in the configuration"
-      }
-    } else {
-      error "Wrong configuration. Key 'mainClass' is missing in the configuration"
-    }
-  }
+		if (prop.containsKey("mainClass")) {
+			if (prop['mainClass'] == "") {
+				error "Wrong configuration. Value for Key 'mainClass' is missing in the configuration"
+			}
+		} else {
+			error "Wrong configuration. Key 'mainClass' is missing in the configuration"
+		}
+	}
 }
 
 
