--- a/builds/delete-serverless-service-build-pack/Jenkinsfile
+++ b/builds/delete-serverless-service-build-pack/Jenkinsfile
@@ -1,16 +1,16 @@
-#!groovy.
+#!groovy?
 import groovy.json.JsonOutput
 import groovy.transform.Field
 import groovy.json.JsonSlurperClassic
 
 // To be replaced as @Field def repo_credential_id = "value" for repo_credential_id, repo_base and repo_core
-@Field def repo_credential_id
-@Field def aws_credential_id
-@Field def region
-@Field def instance_prefix
-@Field def repo_base
-@Field def repo_core
-@Field def scm_type
+@Field def repo_credential_id = "jazz_repocreds"
+@Field def aws_credential_id = "jazz_awscreds"
+@Field def region = "us-east-1"
+@Field def instance_prefix = "multi0312"
+@Field def repo_base = "multi0312-gitlab-alb-831427219.us-east-1.elb.amazonaws.com"
+@Field def repo_core = "slf"
+@Field def scm_type = "gitlab"
 
 /**
  * The Service delete workflow for service types: API, function & website
@@ -1117,23 +1117,6 @@ def removeEventResources() {
    sh "sed -i -- '/#Start:events/,/#End:events/d' ./serverless.yml"
 }
 
-/**
-* Function to get the Credential Id
-* Takes AccountId where the service is deployed
-* and configLoader object as the Input
-**/
-
-def getCredentialID(deployedAccountId , configJson){
-	def credsId= "";
-	def allAccounts = configJson.AWS.ACCOUNTS;
-	for( account in allAccounts ){
-		def accountId = account['ACCOUNTID'];
-		if(accountId == deployedAccountId){
-			credsId = account["CREDENTIAL_ID"];
-		}
-	}
-	return credsId;
-}
 
 
 
